[project]
name = "pymusiclooper"
version = "3.4.1"
dependencies= [
  "librosa>=0.10.2",
  "numpy>=2.0.0",
  "soundfile>=0.12.1",
  "sounddevice>=0.4.6",
  "rich-click>=1.8.0",
  "rich>=13.4.2",
  "pytaglib>=3.0.0",
  "numba>=0.59.1",
  "yt-dlp>=2024.7.2",
  "click-params>=0.5.0",
  "click-option-group>=0.5.6",
  "lazy-loader>=0.3",
]

